# house_of_novels

./: .gitignore  README.md  main.py  pyproject.toml
docs/: PIPELINE_OVERVIEW.md
src/: codex_generator.py  comfyui_trigger.py  config.py  deck_of_worlds_agents.py  deck_of_worlds_generator.py  generate_image_prompts.py  generate_story.py  house_of_novels.py  story_builder.py  story_engine_agents.py  story_engine_generator.py  story_schemas.py  story_workflows.py  visual_styles.py
src/agents/: __init__.py  base_agent.py  card_agents.py  supervisor.py
src/graph/: __init__.py  state.py  workflow.py
src/phases/: __init__.py  phase0_codex.py  phase1_outline.py  phase2_characters.py  phase3_narrative.py  phase3b_storyboard.py  phase4_prompts.py  phase5_generation.py  phase6_editing.py  phase7_youtube.py
src/prompts/: __init__.py  base_config.py  character_concept.py  circle_of_fate.py  complex_microsetting.py  simple_microsetting.py  story_seed.py
src/story_agents/: __init__.py  base_story_agent.py  character_agents.py  character_prompt_agents.py  image_prompt_agents.py  location_prompt_agents.py  name_agents.py  narrative_agents.py  outline_agents.py  outline_research_agents.py  reviser_agent.py  scene_image_prompt_agents.py  shot_frame_prompt_agents.py  storyboard_agents.py  video_prompt_agents.py  youtube_metadata_agent.py
src/templates/: __init__.py  base_template.py
src/youtube/: __init__.py  credentials.py  upload.py
workflows/: Chatterbox.json  Vibevoice_Single-Speaker.json  video_ltx2_i2v_distilled.json  z_image_turbo_example.json
(+6 files in other folders)
